Batch of notes adding metadata

--- a/src/content/technotes/TN0023-nullability.mdx
+++ b/src/content/technotes/TN0023-nullability.mdx
@@ -1,5 +1,7 @@
 ---
 title: Nullability
+description: All fields in GraphQL are nullable by default and it's often best to err on the side of embracing that default behavior as new fields are initially added to a schema.
+published: 2023-01-09
 id: TN0023
 tags: [schema-design, federation]
 ---
@@ -9,6 +11,7 @@ tags: [schema-design, federation]
 If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Schema design](https://www.apollographql.com/tutorials/schema-design-best-practices) course on Odyssey.
 
 Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+
 </Tip>
 
 ## Make intentional choices about nullability
