--- a/src/content/technotes/TN0025-supergraph-stewardship.mdx
+++ b/src/content/technotes/TN0025-supergraph-stewardship.mdx
@@ -1,5 +1,7 @@
 ---
 title: Supergraph stewardship
+description: Given the evolutionary nature of a supergraph, strong stewardship practices are needed to help maintain its integrity while simultaneously driving its adoption across teams.
+published: 2023-01-09
 id: TN0025
 tags: [schema-design]
 ---
