--- a/src/content/technotes/TN0027-demand-oriented-schema-design.mdx
+++ b/src/content/technotes/TN0027-demand-oriented-schema-design.mdx
@@ -1,5 +1,7 @@
 ---
 title: Demand oriented schema design
+description: To best support the client applications that consume data from our federated graph, we must intentionally design schemas in an abstract, demand-oriented way.
+published: 2023-01-09
 id: TN0027
 tags: [federation, schema-design]
 ---
@@ -9,6 +11,7 @@ tags: [federation, schema-design]
 If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Schema design](https://www.apollographql.com/tutorials/schema-design-best-practices) course on Odyssey.
 
 Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+
 </Tip>
 
 ## Design schemas in a demand-oriented, abstract way
