Another batch of tech notes meta data

--- a/src/content/technotes/TN0033-sdui-schema-design.mdx
+++ b/src/content/technotes/TN0033-sdui-schema-design.mdx
@@ -1,5 +1,7 @@
 ---
 title: Server-driven UI schema design
+description: Using enums, contracts, and interfaces to implement Server-driven UI (SDUI).
+published: 2023-01-30
 id: TN0033
 tags: [schema-design, server-driven-ui]
 ---
@@ -9,6 +11,7 @@ tags: [schema-design, server-driven-ui]
 If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Schema design](https://www.apollographql.com/tutorials/schema-design-best-practices) course on Odyssey.
 
 Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+
 </Tip>
 
 These patterns provide examples of server-driven UI (SDUI) and how to structure your graph's schema to encode and represent UI elements. Clients can then use platform-specific rendering engines to interpret the schema and generate UI components.
@@ -16,6 +19,7 @@ These patterns provide examples of server-driven UI (SDUI) and how to structure 
 <Tip>
 
 For more information on SDUI in general, see [Server-driven UI basics](/technotes/TN0032-sdui-basics/).
+
 </Tip>
 
 ## Device-based SDUI with enums
@@ -65,6 +69,7 @@ type Query {
 <Tip>
 
 Read more on [contracts usage patterns](/technotes/TN0014-contracts-patterns/).
+
 </Tip>
 
 ## SDUI web dashboard
