--- a/src/content/technotes/TN0028-change-management.mdx
+++ b/src/content/technotes/TN0028-change-management.mdx
@@ -1,5 +1,7 @@
 ---
 title: Deploying API changes with Managed Federation and GraphOS
+description: Allowing teams to independently update the components they own is a key benefit of federation. However, understanding and de-risking changes to a component can be challenging, especially because changes might require cascading changes in other components.
+published: 2023-01-09
 id: TN0028
 tags: [federation]
 ---
