--- a/src/content/technotes/TN0031-graph-identities.mdx
+++ b/src/content/technotes/TN0031-graph-identities.mdx
@@ -1,5 +1,7 @@
 ---
 title: Graph Identities
+description: The purpose of this technote is to demonstrate queries/mutations for identifying an actor attempting to use the graph.
+published: 2023-01-19
 id: TN0031
 tags: [schema-design]
 ---
