--- a/src/content/technotes/TN0032-sdui-basics.mdx
+++ b/src/content/technotes/TN0032-sdui-basics.mdx
@@ -1,5 +1,7 @@
 ---
 title: Server-driven UI basics
+description: Server-driven UI (SDUI) is an architectural pattern that aims to reduce client-side logic and provide consistency across client platforms (web, iOS, Android, etc.) by returning product information from an API instead of domain data.
+published: 2023-01-30
 id: TN0032
 tags: [schema-design, server-driven-ui]
 ---
