--- a/src/content/technotes/TN0038-updating-client-schema.mdx
+++ b/src/content/technotes/TN0038-updating-client-schema.mdx
@@ -1,5 +1,7 @@
 ---
 title: Keeping schemas up-to-date in client apps
+description: Client apps need to keep their schemas up-to-date whenever changes are made to the supergraph. In order to facilitate this Apollo has some specific recommendations.
+published: 2023-04-12
 id: TN0038
 tags: [federation, best-practices, client]
 ---
