--- a/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
+++ b/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
@@ -1,5 +1,7 @@
 ---
 title: Debugging subgraph requests from Apollo Router or @apollo/gateway
+description: As your graph grows, you may need to debug a problematic query for one reason or another. The Apollo Router and @apollo/gateway both serve as an entry point into your federated graph and offer ways to debug requests.
+published: 2023-04-13
 id: TN0039
 tags: [federation, gateway, router, subgraphs]
 ---
